---------------------------------------------------------------------------------------------------
Version: 1.3.3
Date: ????
  Changes:
---------------------------------------------------------------------------------------------------
Version: 1.3.2
Date: 2025-02-18
  Changes:
    - Reverted the changes in 1.3.0 for now.
---------------------------------------------------------------------------------------------------
Version: 1.3.1
Date: 2025-02-17
  Changes:
    - Added the setting Redrawn-Space-Connections-real-space-triangulation.
---------------------------------------------------------------------------------------------------
Version: 1.3.0
Date: 2025-02-17
  Changes:
    - Connections with redrawn_connections_keep now form a natural part of the resulting triangulation.
---------------------------------------------------------------------------------------------------
Version: 1.2.0
Date: 2025-02-07
  Changes:
    - Fixed redrawn_connections_exclude not working on space connections.
    - Fixed possibility of duplicate edges to 'redrawn_connections_exclude' locations.
    - Added API redrawn_connections_rescale
    - Renamed redrawn_connections_exclude to redrawn_connections_keep
---------------------------------------------------------------------------------------------------
Version: 1.1.7
Date: 2025-02-07
  Changes:
    - Fixed a crash.
---------------------------------------------------------------------------------------------------
Version: 1.1.6
Date: 2025-02-07
  Changes:
    - Removed undocumented and nonfunctional API.
---------------------------------------------------------------------------------------------------
Version: 1.1.5
Date: 2025-02-04
  Changes:
    - redrawn_connections_length_multiplier is now 100 for shattered-planet.
---------------------------------------------------------------------------------------------------
Version: 1.1.4
Date: 2025-02-04
  Changes: