@@ -2,6 +2,8 @@
 Version: 1.3.3
 Date: ????
   Changes:
+    - Replaced the approximate distance formula with an exact one.
+    - Asteroids on routes to Maraxsis are now generated like those to Aquilo.
 ---------------------------------------------------------------------------------------------------
 Version: 1.3.2
 Date: 2025-02-18
